Fix multiline highlights in CodeMirror
A bug in the JS binding to CodeMirror made multiline highlights only
apply on the first line.

Changed the CSS within .cm-editor to make multiline highlights connect
across lines, previously there was a small gap between each line.

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -532,6 +532,11 @@ body[data-theme-light="true"] .elp-flash-multiline {
   background: #8081;
 }
 
+/* Fix multiline highlights in CodeMirror */
+.cm-editor .monaco-rag-highlight-sticky,
+.cm-editor .elp-flash-multiline {
+  display: inline-block;
+}
 
 /* Progressively higher alpha values so that overlapping sticky highlights are easier to distinguish */
 .monaco-rag-highlight-sticky-0 { background: rgba(  0, 255,   0, 0.200); /* lime */ }
